Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-46310

StatSnap running during shutdown can persist incorrect ep_force_shutdown flag

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 7.0.0
    • 6.0.5, 6.6.2, 6.5.2, Cheshire-Cat
    • couchbase-bucket
    • 7.0.0-5161
    • Untriaged
    • 1
    • Unknown
    • KV-Engine CC Final Sprint

    Description

      172.23.121.154

      2021-05-14T10:02:29.275667-07:00 CRITICAL *** Fatal error encountered during exception handling ***
      2021-05-14T10:02:29.275719-07:00 CRITICAL Caught unhandled std::exception-derived exception. what(): EPBucket::flushVBucket: vb:71 Trying to set PCS to 10857 but the current value is 11125 and the PCS must be monotonic. The current checkpoint type is Disk
      2021-05-14T10:02:29.678935-07:00 CRITICAL Breakpad caught a crash (Couchbase version 7.0.0-5161). Writing crash dump to /opt/couchbase/var/lib/couchbase/crash/a7dbcb95-70cf-4d67-8fc9d59b-e2e645bf.dmp before terminating.
      2021-05-14T10:02:29.678969-07:00 CRITICAL Stack backtrace of crashed thread:
      2021-05-14T10:02:29.679178-07:00 CRITICAL     #0  /opt/couchbase/bin/memcached() [0x400000+0x674f03]
      2021-05-14T10:02:29.679205-07:00 CRITICAL     #1  /opt/couchbase/bin/memcached(_ZN15google_breakpad16ExceptionHandler12GenerateDumpEPNS0_12CrashContextE+0x3ea) [0x400000+0x69524a]
      2021-05-14T10:02:29.679227-07:00 CRITICAL     #2  /opt/couchbase/bin/memcached(_ZN15google_breakpad16ExceptionHandler13SignalHandlerEiP9siginfo_tPv+0xb8) [0x400000+0x695588]
      2021-05-14T10:02:29.679235-07:00 CRITICAL     #3  /lib64/libpthread.so.0() [0x7fea57923000+0xf630]
      2021-05-14T10:02:29.679264-07:00 CRITICAL     #4  /lib64/libc.so.6(gsignal+0x37) [0x7fea55391000+0x36387]
      2021-05-14T10:02:29.679291-07:00 CRITICAL     #5  /lib64/libc.so.6(abort+0x148) [0x7fea55391000+0x37a78]
      2021-05-14T10:02:29.679317-07:00 CRITICAL     #6  /opt/couchbase/bin/../lib/libstdc++.so.6() [0x7fea55c79000+0x9963c]
      2021-05-14T10:02:29.679343-07:00 CRITICAL     #7  /opt/couchbase/bin/memcached() [0x400000+0x681e6f]
      2021-05-14T10:02:29.679364-07:00 CRITICAL     #8  /opt/couchbase/bin/../lib/libstdc++.so.6() [0x7fea55c79000+0xa48f6]
      2021-05-14T10:02:29.679380-07:00 CRITICAL     #9  /opt/couchbase/bin/../lib/libstdc++.so.6() [0x7fea55c79000+0xa4961]
      2021-05-14T10:02:29.679397-07:00 CRITICAL     #10 /opt/couchbase/bin/../lib/libstdc++.so.6() [0x7fea55c79000+0xa4bf4]
      2021-05-14T10:02:29.679411-07:00 CRITICAL     #11 /opt/couchbase/bin/memcached() [0x400000+0xb5c85]
      2021-05-14T10:02:29.679427-07:00 CRITICAL     #12 /opt/couchbase/bin/memcached() [0x400000+0x3fa14f]
      2021-05-14T10:02:29.679442-07:00 CRITICAL     #13 /opt/couchbase/bin/memcached() [0x400000+0x2a08b0]
      2021-05-14T10:02:29.679455-07:00 CRITICAL     #14 /opt/couchbase/bin/memcached() [0x400000+0x2a1379]
      2021-05-14T10:02:29.679466-07:00 CRITICAL     #15 /opt/couchbase/bin/memcached() [0x400000+0x2a35b7]
      2021-05-14T10:02:29.679477-07:00 CRITICAL     #16 /opt/couchbase/bin/memcached() [0x400000+0x29e700]
      2021-05-14T10:02:29.679499-07:00 CRITICAL     #17 /opt/couchbase/bin/memcached() [0x400000+0x70fbc0]
      2021-05-14T10:02:29.679521-07:00 CRITICAL     #18 /opt/couchbase/bin/memcached() [0x400000+0x6f797a]
      2021-05-14T10:02:29.679540-07:00 CRITICAL     #19 /opt/couchbase/bin/memcached() [0x400000+0x712b79]
      2021-05-14T10:02:29.679553-07:00 CRITICAL     #20 /opt/couchbase/bin/memcached() [0x400000+0x29cd9d]
      2021-05-14T10:02:29.679581-07:00 CRITICAL     #21 /opt/couchbase/bin/../lib/libstdc++.so.6() [0x7fea55c79000+0xcdd40]
      2021-05-14T10:02:29.679587-07:00 CRITICAL     #22 /lib64/libpthread.so.0() [0x7fea57923000+0x7ea5]
      2021-05-14T10:02:29.679619-07:00 CRITICAL     #23 /lib64/libc.so.6(clone+0x6d) [0x7fea55391000+0xfe8dd]
      

      QE Test

      guides/gradlew --refresh-dependencies testrunner -P jython=/opt/jython/bin/jython -P 'args=-i /tmp/testexec.82805.ini bucket_storage=magma,rerun=false,GROUP=P0;long_graceful,randomize_value=true,doc_size=256,bucket_eviction_policy=fullEviction,replicas=1,nodes_init=4,dcp_services=n1ql-index,enable_dp=True,get-cbcollect-info=True,infra_log_level=critical,log_level=error,upgrade_version=7.0.0-5161 -t magma.magma_crash_recovery.MagmaCrashTests.test_crash_during_ops,num_items=1000000,doc_size=256,sdk_timeout=60,graceful=True,doc_ops=create:expiry,replicas=1,GROUP=P0;long_graceful,durability=MAJORITY,multiplier=100'
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ritesh.agarwal Ritesh Agarwal
              ritesh.agarwal Ritesh Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty