engines/ep/src/ep_bucket.cc
@@ -311,13 +311,15 @@ std::vector<ExTask> EPBucket::deinitialize() {
     stopBgFetcher();
     stopWarmup();
 
+    auto ret = KVBucket::deinitialize();
+
     // Perform a snapshot of the stats before shutting down so we can
     // persist the type of shutdown (stats.forceShutdown), and consequently
     // on the next warmup can determine is there was a clean shutdown - see
-    // Warmup::cleanShutdown
-    snapshotStats();
-
-    auto ret = KVBucket::deinitialize();
+    // Warmup::cleanShutdown. This must be called after KVBucket::deinitialize()
+    // to prevent a race condition with the StatSnap task as the deinitialize
+    // function will cancel all running tasks.
+    snapshotStats(true /*shuttingDown*/);
 
     // Now that we've stopped all of our tasks, stop any tasks the storage
     // layer may have created.
